--- a/index.html
+++ b/index.html
@@ -1,13 +1,112 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function(){
+            emailjs.init("SChs7OFlW0S1_c8M3"); // reemplaza con tu user ID de EmailJS
+        })();
+    </script>
+
 </head>
 <body>
+<!-- Header -->
+<header>
 
-    <script src="script.js"></script>
+    <a href="#" class="logo">
+        <div class="logo-icon">
+            <img src="./images/logoEduHive.png" alt="Logo" />
+        </div>
+    </a>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#features">WHY EDUHIVE</a></li>
+            <li><a href="#testimonials">TESTIMONIES</a></li>
+            <li><a href="#news">NEWS</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
+
+        <div class="auth-buttons">
+            <button class="login-btn">LOGIN</button>
+            <button class="register-btn">REGISTER</button>
+            <button class="settings-btn">
+            </button>
+        </div>
+    </nav>
+</header>
+
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer-grid">
+            <div class="footer-column">
+                <img src="images/logoEduHive.png" alt="Logo Edu Hive" height="100px">
+                <div class="copyright">
+                    <p><i class="fas fa-copyright"></i> 2025 <strong>Eduhive</strong>. Diseñado con <i class="fas fa-heart" style="color: #ff0000;"></i> para la educación.</p>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 >COMPANY</h3>
+                <ul class="footer-links">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Mision</a></li>
+                    <li><a href="#">Vision</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3 >SERVICES</h3>
+                <ul class="footer-links">
+                    <li><a href="#">Online Courses</a></li>
+                    <li><a href="#">Challenges</a></li>
+                    <li><a href="#">Tutoring Services</a></li>
+                    <li><a href="#">Educational Consulting</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3 >RESOURCES</h3>
+                <ul >
+                    <li ><a href="#">Blog</a></li>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">E-books & Guides</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <!-- Facebook, LinkedInd, Twitter,Instagram -->
+                <div class="icon-row">  <!-- Contenedor de la fila de iconos -->
+                    <div class="icon-item">
+                        <a href="#"><i class="fab fa-facebook"></i></a>  <!-- Icono 1 (ej: Font Awesome) -->
+
+                    </div>
+                    <div class="icon-item">
+                        <a href="#"><i class="fab fa-linkedin"></i></a>  <!-- Icono 2 -->
+
+                    </div>
+                    <div class="icon-item">
+                        <a href="#"><i class="fab fa-twitter"></i></a>  <!-- Icono 3 -->
+
+                    </div>
+                    <div class="icon-item">
+                        <a href="#"><i class="fab fa-instagram"></i></a>  <!-- Icono 3 -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</footer>
+<script src="script.js"></script>
+
 </body>
 </html>
