feat(hero-section): Added hero section
Hero section was added to landing page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
     </nav>
 </header>
 
+<!-- Hero Section -->
+<section class="hero">
+    <div class="hero-content">
+        <h1 class="hero-title">Explore, Learn, Grow</h1>
+        <p class="hero-description">
+            "Access high-quality courses designed to boost your <br>
+            academic and professional growth, from anywhere, at any<br>
+            time."
+        </p>
+        <div class="search-bar">
+            <input type="text" class="search-input" placeholder="Search course ...">
+            <button class="search-btn">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+    </div>
+
+    <div class="hero-image">
+        <img src="./images/imagenInicio.png">
+    </div>
+
+</section>
+
 
 <!-- Footer -->
 <footer>
