feat(knowledge-section): Added knowledge section
Knowledge section was added to landing page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
 </head>
 <body>
 
+    <!-- Dream Section -->
+<section class="dream-section">
+    <div class="dream-color"></div>
+
+    <div class="dream-content">
+        <div class="dream-images">
+            <div class="dream-diamond dream-diamond-1">
+                <img src="./images/diamond1.png" alt="Student writing on blackboard">
+            </div>
+            <div class="dream-diamond dream-diamond-2">
+                <img src="./images/diamond2.png" alt="Student working on laptop">
+            </div>
+            <div class="dream-diamond dream-diamond-3">
+                <img src="./images/diamond3.png" alt="Math equations on blackboard">
+            </div>
+            <div class="dream-diamond dream-diamond-4">
+                <img alt="Math equations on blackboard">
+            </div>
+            <div class="dream-diamond dream-diamond-5">
+                <img alt="Math equations on blackboard">
+            </div>
+        </div>
+
+        <div class="dream-text">
+            <h2 class="dream-title">Take Your Knowledge<br>to the Next Level</h2>
+            <p class="dream-description">
+                Discover everything you can achieve with our educational platform.
+            </p>
+            <a href="#" class="dream-btn">START LEARNING</a>
+        </div>
+    </div>
+
+    </div>
+</section>
+
     <script src="script.js"></script>
 </body>
 </html>
