feat(latest-updates-section): Added latest Updates section
Latest Updates section was added to landing page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,65 @@
 </head>
 <body>
 
+<!-- Latest Update -->
+<section class="latest-updates" id="news">
+
+    <div class="container">
+        <h2 class="section-title">Latest Updates</h2>
+        <div class="updates-grid">
+            <!-- Columna izquierda: Actualizaciones -->
+            <div class="updates-container">
+                <!-- Columna de cursos -->
+                <div class="courses-column">
+                    <div class="course-item">
+                        <h3 class="course-title">Advanced cybersecurity</h3>
+                        <p class="course-desc">Hacking ético y protección de sistemas<br>OWASP, Kali Linux, Metasploit</p>
+                    </div>
+
+                    <div class="course-item">
+                        <h3 class="course-title">Data Science with Python</h3>
+                        <p class="course-desc">Análisis de datos y machine learning<br>Tecnologías: Pandas, NumPy, Matplotlib, Scikit-learn</p>
+                    </div>
+
+                    <div class="course-item">
+                        <h3 class="course-title">Full Stack development</h3>
+                        <p class="course-desc">Construcción de aplicaciones web completas<br>Tecnologías: React, Node.js, Express, MongoDB</p>
+                    </div>
+                </div>
+
+                <!-- Columna de fechas -->
+                <div class="dates-column">
+                    <div class="date-item">
+                        <span class="date-month">SEP</span>
+                        <span class="date-day">16</span>
+                        <span class="date-year">2022</span>
+                    </div>
+
+                    <div class="date-item">
+                        <span class="date-month">OCT</span>
+                        <span class="date-day">25</span>
+                        <span class="date-year">2023</span>
+                    </div>
+
+                    <div class="date-item">
+                        <span class="date-month">DEC</span>
+                        <span class="date-day">14</span>
+                        <span class="date-year">2024</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Columna derecha: Video -->
+            <div class="video-column">
+                <div class="video-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/A4KnrbHVyIA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="yellow-rectangle"></div>
+</section>
+
     <script src="script.js"></script>
 </body>
 </html>
