feat(subscribe-section): Added subscribe section
Subscribe section was added to landing page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Subscribe to our newsletter -->
 
+<section class="subscribe" style="background-image: url('images/biblioteca.jpg');" id="contact">
+    <div class="newsletter-box">
+        <h3>Subscribe to our newsletter</h3>
+        <p>Leave your email and we will send you details about our educational courses and programs.</p>
+
+        <form class="email-form" action="https://formsubmit.co/u202122484@upc.edu.pe" method="POST" id="newsletter-form">
+            <input type="email" name="email" id="user-email" placeholder="Enter your email address" required>
+
+            <!-- Botón -->
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+</section>
     <script src="script.js"></script>
 </body>
 </html>
