--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
 
         <div class="auth-buttons">
-            <button class="login-btn">LOGIN</button>
+            <button class="login-btn" onclick="window.location.href='https://frontend-web-applications-uatk.vercel.app/';">LOGIN</button>
             <button class="register-btn">REGISTER</button>
             <button class="settings-btn">
             </button>
