fix login button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
         </ul>
 
-        <button class="navbar-btn login-btn" data-i18n="login-btn" onclick="window.location.href='https://frontend-web-applications-uatk.vercel.app/';">LOGIN</button>
+        <button class="navbar-btn login-btn" data-i18n="login-btn" onclick="window.location.href='http://frontend-web-applications-deploymen.vercel.app';">LOGIN</button>
     </nav>
 </header>
 
