add links of about the product and about the team

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
         </div>
         <div class="about-product-video">
-            <iframe width="700" height="400" src="https://www.youtube.com/embed/bf2tFixliMA" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+            <iframe width="700" height="400" src="https://www.youtube.com/embed/B2LlwxKzo8s" title="YouTube video" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </section>
@@ -229,7 +229,7 @@
         Somos un equipo apasionado por la educación y la tecnología.
     </p>
     <div class="about-team-video">
-        <iframe width="700" height="400" src="https://www.youtube.com/embed/bf2tFixliMA" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+        <iframe width="700" height="400" src="https://www.youtube.com/embed/l8xbw4YjT3M" title="YouTube video" frameborder="0" allowfullscreen></iframe>
     </div>
 </section>
   
