feat(landing-page): add eduhive information and dark mode

--- a/index.html
+++ b/index.html
@@ -88,32 +88,32 @@
         <div class="feature-card">
             <img src="./images/icono1.png" alt="HD Videos" class="feature-image">
             <div class="feature-content">
-                <h3 class="feature-number">+100K</h3>
+                <h3 class="feature-number">+100</h3>
                 <p class="feature-text" data-i18n="feature1-text">HD Videos</p>
             </div>
         </div>
 
         <!-- Feature 2 -->
         <div class="feature-card">
-            <img src="./images/icono2.png" alt="Professional Mentors" class="feature-image">
+            <img src="./images/icono3.png" alt="Professional Mentors" class="feature-image">
             <div class="feature-content">
-                <h3 class="feature-number">+200</h3>
+                <h3 class="feature-number">+50</h3>
                 <p class="feature-text" data-i18n="feature2-text">Professional Mentors</p>
             </div>
         </div>
 
         <!-- Feature 3 -->
         <div class="feature-card">
-            <img src="./images/icono3.png" alt="Savings" class="feature-image">
+            <img src="./images/icono4.png" alt="Savings" class="feature-image">
             <div class="feature-content">
-                <h3 class="feature-number">$500</h3>
+                <h3 class="feature-number">+200</h3>
                 <p class="feature-text" data-i18n="feature3-text">Saves per Month</p>
             </div>
         </div>
 
         <!-- Feature 4 -->
         <div class="feature-card">
-            <img src="./images/icono4.png" alt="Lifetime Access" class="feature-image">
+            <img src="./images/icono2.png" alt="Lifetime Access" class="feature-image">
             <div class="feature-content">
                 <h3 class="feature-number" data-i18n="feature-number">Free</h3>
                 <p class="feature-text" data-i18n="feature4-text">Life Time Access</p>
@@ -147,37 +147,37 @@
 
         <div class="courses-grid">
             <div class="course-card">
-                <img src="./images/photography.png" alt="Photography" class="course-image">
+                <img src="./images/explore1.png" alt="Calculus" class="course-image">
                 <div class="course-overlay">
-                    <h3 class="course-title" data-i18n="course1-title">Photography</h3>
+                    <h3 class="course-title" data-i18n="course1-title">Calculus</h3>
                 </div>
             </div>
 
             <div class="course-card">
-                <img src="./images/artificial-intelligence.png" alt="Artificial Intelligence" class="course-image">
+                <img src="./images/explore2.png" alt="Physics" class="course-image">
                 <div class="course-overlay">
-                    <h3 class="course-title" data-i18n="course2-title">Artificial Intelligence</h3>
+                    <h3 class="course-title" data-i18n="course2-title">Physics</h3>
                 </div>
             </div>
 
             <div class="course-card">
-                <img src="./images/architect.png" alt="Architect" class="course-image">
+                <img src="./images/explore3.png" alt="Programming" class="course-image">
                 <div class="course-overlay">
-                    <h3 class="course-title" data-i18n="course3-title">Architecture</h3>
+                    <h3 class="course-title" data-i18n="course3-title">Programming</h3>
                 </div>
             </div>
 
             <div class="course-card">
-                <img src="./images/geography.png" alt="Geography" class="course-image">
+                <img src="./images/explore4.png" alt="Chemistry" class="course-image">
                 <div class="course-overlay">
-                    <h3 class="course-title" data-i18n="course4-title">Geography</h3>
+                    <h3 class="course-title" data-i18n="course4-title">Chemistry</h3>
                 </div>
             </div>
 
             <div class="course-card">
-                <img src="./images/art.png" alt="Art" class="course-image">
+                <img src="./images/explore5.png" alt="Economics" class="course-image">
                 <div class="course-overlay">
-                    <h3 class="course-title" data-i18n="course5-title">Art</h3>
+                    <h3 class="course-title" data-i18n="course5-title">Economics</h3>
                 </div>
             </div>
 
